# renderer

./: Cargo.toml  LICENSE  README.md  flake.nix  todo.md
res/: cornell_box.mtl
src/: compute.wgsl  draw.wgsl  main.rs  model.rs  pt.rs  shader.wgsl
