[package]
name = "renderer-empty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = [ "derive" ] }
env_logger = "0.10"
glam = "0.24"
log = "0.4"
pollster = "0.3"
tobj = { version = "4.0", features = ["async"] }
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }
