[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.17", features = [ "derive" ] }
env_logger = "0.11"
glam = "0.29"
log = "0.4"
pollster = "0.3"
tobj = { version = "4.0", features = ["async"] }
wgpu = "22.1"
winit = "0.30"
