[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.17", features = [ "derive" ] }
env_logger = "0.11"
glam = "0.30"
log = "0.4"
pollster = "0.4"
tobj = { version = "4.0", features = ["async"] }
wgpu = "27"
winit = "0.30"
